extracted phantomjs driver path to properties

--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,3 +1,4 @@
 driver=phantomjs
+phantom.driver.path=driver/phantomjs
 webdriver.chrome.driver=driver/chromedriver.exe
 webdriver.implicitly.wait=10
